[tool.poetry]
name = "todo-app"
version = "0.1.0"
description = "test project"
authors = ["Artjom <filarty@gmail.com>"]
readme = "README.md"
packages = [{include = "todo_app"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.97.0"
uvicorn = {extras = ["standart"], version = "^0.22.0"}
requests = "^2.31.0"
sqlmodel = "^0.0.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
